2009-10-31  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager): new function
	renamed from avt_pager_mb
	(avt_pager_mb): wrapper for avt_pager
	(avt_pager_line, avt_pager_screen, avt_pager_lines_back):
	adapted

2009-10-30  Andreas K. Foerster  <info@akfoerster.de>

	* avtar.c (avt_set_avatar_name_mb):
	fix: handle NULL or empty string correctly

	* akfavatar.h, avatar.c (avt_get_color): new function
	colorchooser.c (avta_color_selection): adapted

2009-10-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xbm_RW):
	support old X10 format (deprecated!)

2009-10-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xbm_RW): new function
	many functions adapted

	* avatarsay.c (is_graphic_file):
	accept X-Bitmap (XBM) files

2009-10-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (menu): restructured
	(is_textfile, ask_textfile, show_license, info_submenu):
	new functions
	(about_avatarsay, is_demo_or_text): adapted

2009-10-25  Andreas K. Foerster  <info@akfoerster.de>

	* avtar.c (avt_pager_line):
	ignore formfeeds at beginning of line, or treat them like newlines

2009-10-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_drawchar): work with 1Bit surface
	avt_initialize: adapted

2009-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xbm): optimized
	(avt_draw_balloon2): adapted
	circle.xpm: adapted (must be multiple of 8)

	*avatar.c (avt_draw_balloon2):
	improve balloon-corners in vga resolution

2009-10-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_avatar_name, avt_set_avatar_name_mb):
	new functions
	avatar.c (avt_show_name): new function
	avatar.c (avt_draw_avatar, avt_change_avatar_image): adapted
	pascal/akfavatar.pas: adapted

	* avatarsay.c (avatar_command): new command: avatarname

2009-10-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): support for spacer
